解决1、角色或部门不再需要认领了，根据流程模型设置情况来实际审批 2、支持角色、部门到下级全体人员审批，也支持原有单个人审批逻辑，都做兼容